Fixed voting not redirecting properly, and fixed scheduling width being too small

--- a/src/styles/TimeSelection.css
+++ b/src/styles/TimeSelection.css
@@ -1,5 +1,4 @@
 #time {
-    width: 90%;
     height: 150px;
 }
 
